# AutoDash

./: .gitignore  .gitmodules  AutoDash.pro  AutoDash.sh  CMakeLists.txt  README.md
common/include/: Typedefs.hpp  Version.hpp
common/include/interface/: IClickable.hpp  IColourPalette.hpp  IEvent.hpp  IModule.hpp  IResolver.hpp  ISettingEntry.hpp  ITemplateProvider.hpp
common/include/interface/factory/: IListOptionFactory.hpp  ISettingEntryFactory.hpp
common/include/interface/template/: IButton.hpp  IHeaderPage.hpp  ITemplate.hpp
common/include/interface/template/list/: IList.hpp  IListButton.hpp  IListItem.hpp  IListOption.hpp  IListSeparator.hpp  IListSpacer.hpp
common/include/interface/template/slider/: IHorizontalDoubleSlider.hpp  IHorizontalIntSlider.hpp  IHorizontalSlider.hpp  ISlider.hpp
include/: Launcher.hpp  Log.hpp  ModuleLoader.hpp  Resolver.hpp  TemplateProvider.hpp  Window.hpp
include/config/: BaseConfig.hpp
include/factory/: ConfigFactory.hpp  ListOptionFactory.hpp  SettingEntryFactory.hpp
include/interface/: IClickable.hpp  IConfig.hpp  IModule.hpp
include/settings/: BoolSettingEntry.hpp  FloatDistinctSettingEntry.hpp  FloatRangeSettingEntry.hpp  IntDistinctSettingEntry.hpp  IntRangeSettingEntry.hpp  ListSettingSlider.hpp  SettingEntry.hpp  SettingsFrame.hpp  SettingsModule.hpp  StringDistinctSettingEntry.hpp  StringSettingEntry.hpp
include/template/: Button.hpp  HeaderPage.hpp
include/template/list/: List.hpp  ListButton.hpp  ListOption.hpp  ListOptionComboBox.hpp  ListSeparator.hpp  ListSpacer.hpp
include/template/slider/: HorizontalDoubleSlider.hpp  HorizontalIntSlider.hpp  HorizontalSlider.hpp  Slider.hpp
include/widget/: Bar.hpp  BaseClickable.hpp  Favourites.hpp  IconGroup.hpp  LauncherEntry.hpp  MainFrame.hpp  ModuleIcon.hpp  PluginIcon.hpp  SVGLabel.hpp  StatusBar.hpp  SvgButton.hpp  Taskbar.hpp  ToolBar.hpp
resources/: resources.qrc
source/: Launcher.cpp  Log.cpp  ModuleLoader.cpp  Resolver.cpp  TemplateProvider.cpp  Window.cpp  main.cpp
source/config/: BaseConfig.cpp
source/factory/: ConfigFactory.cpp  ListOptionFactory.cpp  SettingEntryFactory.cpp
source/settings/: BoolSettingEntry.cpp  FloatDistinctSettingEntry.cpp  FloatRangeSettingEntry.cpp  IntDistinctSettingEntry.cpp  IntRangeSettingEntry.cpp  SettingEntry.cpp  SettingsFrame.cpp  SettingsModule.cpp  StringDistinctSettingEntry.cpp  StringSettingEntry.cpp
source/template/: Button.cpp  HeaderPage.cpp
source/template/list/: List.cpp  ListButton.cpp  ListOption.cpp  ListOptionComboBox.cpp  ListSeparator.cpp  ListSpacer.cpp
source/template/slider/: HorizontalDoubleSlider.cpp  HorizontalIntSlider.cpp  HorizontalSlider.cpp  Slider.cpp
source/widget/: Bar.cpp  BaseClickable.cpp  Favourites.cpp  IconGroup.cpp  LauncherEntry.cpp  MainFrame.cpp  ModuleIcon.cpp  PluginIcon.cpp  SVGLabel.cpp  StatusBar.cpp  SvgButton.cpp  Taskbar.cpp  ToolBar.cpp
